Finalised client for hbnb

--- a/client/add_review.html
+++ b/client/add_review.html
@@ -9,7 +9,7 @@
 </head>
 <body class="h-screen flex flex-col border border-red-700">
     <main class="flex-grow flex flex-col justify-center items-center">
-        <form id="review-form" class="flex flex-col border border-black p-6">
+        <form id="review-form" class="flex flex-col  p-6">
             <h2 class="text-4xl mb-6">Add a Review</h2>
             
             <input type="text" id="place" name="place" aria-label="Place to review" placeholder="Place to review" class="mb-4 px-2 rounded-md" readonly>
