--- a/client/login.html
+++ b/client/login.html
@@ -10,7 +10,15 @@
 </head>
 
 <body class="h-screen flex flex-col border border-red-700">
-    <main class="flex-grow flex flex-col justify-center items-center">
+    <header>
+        <nav class="flex flex-row justify-between items-center ">
+            <div>
+                <a href="index.html"><img src="logo.png" alt="logo"></a>
+            </div>
+            <a href="login.html" id="login-link" class="text-grey-800 text-3xl pt-3">Login</a>
+        </nav>
+    </header>
+    <main class="flex-grow flex flex-col">
         <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-2">
             <div>
                 <img src="https://images.pexels.com/photos/1268871/pexels-photo-1268871.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="beach-house" class="rounded-tl-lg rounded-bl-lg">
