--- a/client/place.html
+++ b/client/place.html
@@ -11,8 +11,11 @@
 
 <body>
     <header>
-        <nav>
-            <a href="login.html" id="login-link">Login</a>
+        <nav class="flex flex-row justify-between items-center ">
+            <div>
+                <a href="index.html"><img src="logo.png" alt="logo" class=""></a>
+            </div>
+            <a href="login.html" id="login-link" class="text-grey-800 text-3xl pt-3">Login</a>
         </nav>
     </header>
     <main class="container mx-auto">
